syntax = "proto3";

package postgres;

option go_package = "sqlcgrpc/proto/postgres";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "sqlcgrpc";
        version: "1.0";
        description: "Boilerplate code generated by sqlc-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "sqlc-grpc";
            url: "https://github.com/walterwanderley/sqlc-grpc";
        };
    };
};
service PostgresService {
    
    rpc GetDatums(google.protobuf.Empty) returns (GetDatumsResponse) {
        option (google.api.http) = {
            post: "/datums"
            body: "*"
            response_body: "value"
            
        };
    }
    
}

message GetDatumsResponse {
    repeated GetDatumsRow value = 1;
}

message Datum {
    int64 id = 1;
    int64 authorID = 2;
    string datum = 3;
    google.protobuf.StringValue previousHash = 4;
    google.protobuf.StringValue hash = 5;
    google.protobuf.Timestamp createdAt = 6;
}

message GetDatumsRow {
    string datum = 1;
    google.protobuf.StringValue hash = 2;
    google.protobuf.StringValue previousHash = 3;
    google.protobuf.Timestamp createdAt = 4;
    string nickname = 5;
}

message User {
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
    string password = 5;
    bool deleted = 6;
    string nickname = 7;
    google.protobuf.Timestamp createdAt = 8;
}

